fixed letter spacing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -24,6 +24,10 @@ header {
   background-color: $background-color;
 }
 
+.header-title {
+  letter-spacing: -2px;
+}
+
 .post-buttons {
   margin: 30px 0;
 }
